@@ -4,6 +4,8 @@ Development Progress	:
 ---------------------------
 
 2011-02-08 (SVN):
+    * common.h: added note that X_OK (0x01) must not be used in windows
+      code.
     * quakeinc.h: include sys.h earlier.
 
 2011-02-08 (SVN):
